Fixed screen adaptability on mobile devices via the computer. Now I want to check on an actual mobile device.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,7 +10,6 @@
 .background {
   background: url('../images/backgrounds/wallpaper.png') center center fixed;
   background-size: cover;
-  overflow: scroll;
 }
 
 .container {
@@ -20,84 +19,6 @@
   justify-content: center;
   align-items: center;
   font-family: "Roboto", sans-serif;
-
-  @media (max-width: 1180px) {
-      .book {
-          display: flex;
-          flex-wrap: wrap;
-          flex-direction: row;
-      }
-  }
-
-  @media (max-width: 850px) {
-      display: flex;
-      flex-wrap: wrap;
-      flex-direction: row;
-      padding-top: 5%;
-      perspective: 1000px;
-      .book {
-          display: flex;
-          flex-wrap: wrap;
-          flex-direction: column;
-      }
-
-      .flip {
-          width: 100%;
-          height: 100%;
-          top: 0;
-          left: 0;
-          transform-origin: top;
-          transform-style: preserve-3d; 
-          transform: rotateX(0deg);
-          transition: .5s;
-          color: #000;
-      }
-
-      .front {
-          position: absolute;
-          width: 100%;
-          height: 100%;
-          top: 0;
-          left: 0;
-          background-color: var(--primary-color);
-          box-sizing: border-box;
-          padding: 0 13px;
-          box-shadow: inset 20px 0 50px rgba(0,0,0,0.5), 0 2px 5px rgba(0,0,0,.5);
-          display: flex;
-          align-items: center;
-          justify-content: center;
-          flex-direction: column;
-      }
-      
-      .back {
-          position: absolute;
-          width: 100%;
-          height: 100%;
-          top: 0;
-          left: 0;
-          z-index: 99;
-          transform: rotateX(180deg);
-          backface-visibility: hidden;
-          background-color: var(--secondary-color);
-          display: flex;
-          align-items: center;
-          justify-content: center;
-          flex-direction: column;
-      }
-      
-      #c1:checked ~ .flip-book #p1 {
-          transform: rotateX(180deg);
-          z-index: 1;
-      }
-      #c2:checked ~ .flip-book #p2 {
-          transform: rotateX(180deg);
-          z-index: 2;
-      }
-      #c3:checked ~ .flip-book #p3 {
-          transform: rotateX(180deg);
-          z-index: 3;
-      }
-  }
 }
 
 input {
